geo and geo+temporal queries implementation